# df-contracts

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
df_contracts/: __init__.py  api.py  checks.py  cli.py  drift.py  errors.py  inference.py  linting.py  plugin.py  report.py  schema.py  types.py  utils.py  versioning.py
df_contracts/exporters/: __init__.py  dbt.py  gx.py  sqlgen.py  typesgen.py
df_contracts/notebooks/: killer_demo.ipynb
tests/: conftest.py  test_api_validate.py  test_cli_init_check.py  test_drift.py  test_exporters.py  test_infer_and_upgrade.py  test_linting.py  test_pytest_plugin.py  test_reports.py  test_types_sqlgen.py
tests/data/: bad_sample.csv  sample.csv  snapshot_ref.json
